More ERE name options
- Added Basileía tōn Rhōmaíōn and Rhōmanía to the name change decisions.

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -131,8 +131,16 @@
  ere_ere_name_decision_desc: "Latinize our name to 'Eastern Roman Empire'"
  ere_ere_name_decision_custom_tooltip: "We should use our full Latin name 'Eastern Roman Empire'."
  ere_romania_name_decision: "Latinize Name: 'Romania'"
- ere_romania_name_decision_desc: "Latinize our name to 'Romania'"
+ ere_romania_name_decision_desc: "Sometimes used, especially in poetic or legal contexts, to refer to Roman lands. It is also used to refer to the Roman Empire in a more general sense, as opposed to the Eastern Roman Empire. The term 'Romania' is derived from the Latin word 'Romanus', which means 'of Rome' or 'Roman'. It is used to refer to the lands that were once part of the Roman Empire, including parts of modern-day Italy, France, Spain, Portugal, and Romania."
  ere_romania_name_decision_custom_tooltip: "We should use our Latin name 'Romania'."
+
+ ere_rhomania_i_name_decision: "Full Formal Transliteration: Basileía tōn Rhōmaíōn"
+ ere_rhomania_i_name_decision_desc: "The difference between Rhōmaíōn and Romaíon is due to transliteration conventions. The initial Ῥ (Rho with rough breathing) was historically pronounced with an aspirated "R" sound, which some transliterations preserve as "Rh" (Rhōmaíōn). Others drop the aspiration, resulting in "Romaíon". While medieval Greek speakers did not write an "H," Rhōmaíōn better reflects historical pronunciation, whereas Romaíon is a simpler modern transliteration."
+ ere_rhomania_i_name_decision_custom_tooltip: "We should use our formal transliteration: Basileía tōn Rhōmaíōn"
+
+ ere_rhomania_ii_name_decision: "Transliteration: Rhōmanía"
+ ere_rhomania_ii_name_decision_desc: "The initial Ῥ (Rho with rough breathing) was historically pronounced with an aspirated "R" sound, which some transliterations preserve as "Rh" (Rhōmanía). Others drop the aspiration, resulting in "Romanía". While medieval Greek speakers did not write an "H," Rhōmanía better reflects historical pronunciation, whereas Romanía is a simpler modern transliteration."
+ ere_rhomania_ii_name_decision_custom_tooltip: "We should use our pronounced transliteration: Rhōmanía"
  
  #Government Decisions
  abolish_feudalism_decision: "Abolish Feudalism"
