--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -368,13 +368,17 @@
  dyn_c_ere: "Eastern Roman Empire"
  dyn_c_romania: "Romania"
  dyn_c_re_adj: "Roman"
+ dyn_c_rhomania_i: "Basileía tōn Rhōmaíōn"
+ dyn_c_rhomania_ii: "Rhōmanía"
  
  ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
  ere_romania_name_tt: "Name of our country will be changed to 'Romania'"
+ ere_rhomania_i_name_tt: "Name of our country will be changed to 'Basileía tōn Rhōmaíōn'"
+ ere_rhomania_ii_name_tt: "Name of our country will be changed to 'Rhōmanía'"
 
  #Power Blocs
- Romaion_Bloc: "Basileía ton Romaíon" #Koinopolitia
+ Romaion_Bloc: "Basileía tōn Romaíon" #Koinopolitia
  Imperial_HRE: "Universum Regnum"
  Venetia_Trade_League: "Lega Venezia"
  Genoa_Trade_League: "Lega Genovese"
