endonymization to Exellēnízō
#Georgia renamed
-Sakartvelo name when independent
-Kartuli adjective when independent
-Ibería name when subject of BR
-Iberikón adjective when subject of BR
#Armenia renamed
-Hayastanname when independent
-Haykakan adjective when independent
-Armeníōn name when subject of BR
-Armenikoí adjective when subject of BR

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -222,6 +222,11 @@
  dyn_c_lotharingia_germany_name: "Lotharingia"
 
 
+ dyn_c_byz_armenia: "Armeníōn"
+ dyn_c_byz_armenia_adj: "Armenikoí"
+ dyn_c_byz_georgia: "Ibería"
+ dyn_c_byz_georgia_adj: "Iberikón"
+
  #Decentralized nations
   #Asia
  br_mrauk: "Mrauk U"
