--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -224,8 +224,12 @@
 
  dyn_c_byz_armenia: "Armeníōn"
  dyn_c_byz_armenia_adj: "Armenikoí"
+ dyn_c_eng_armenia: "Armenia"
+ dyn_c_eng_armenia_adj: "Armenia"
  dyn_c_byz_georgia: "Ibería"
  dyn_c_byz_georgia_adj: "Iberikón"
+ dyn_c_eng_georgia: "Georgia"
+ dyn_c_eng_georgia_adj: "Georgian"
 
  #Decentralized nations
   #Asia
