--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -92,9 +92,9 @@
  palaiologos_events.1.c: "Abolish the system in fact as well as in name."
  pronoia_abolished: "Pronoia Abolished"
 
- palaiologos_events.2.t: "An Romaíon Land Code"
+ palaiologos_events.2.t: "An [ROOT.GetCountry.GetName] Land Code"
  palaiologos_events.2.d: "Our existing system of land ownership is old, inconsistent, and in dire need of reform. Proponents of modernization demand action; how shall the Basileus respond?"
- palaiologos_events.2.f: "Land ownership in the Basileía Romaíon is a complicated affair, consisting of an overlapping patchwork of tenured and communal lands, tax-exempt villages, grants of conquest, and a slew of other land categories. Recognizing the current situation's negative impact on state administration and revenue, key figures in Konstantinople push for reform. \n\nFearing conscription and increased taxation however, the Dynatói are sure to disapprove of any change to the status quo. "
+ palaiologos_events.2.f: "Land ownership in the [ROOT.GetCountry.GetName] is a complicated affair, consisting of an overlapping patchwork of tenured and communal lands, tax-exempt villages, grants of conquest, and a slew of other land categories. Recognizing the current situation's negative impact on state administration and revenue, key figures in Konstantinople push for reform. \n\nFearing conscription and increased taxation however, the Dynatói are sure to disapprove of any change to the status quo. "
  palaiologos_events.2.a: "Reform the system, but recognize traditional land categories."
  palaiologos_events.2.b: "The old system has served us well."
  palaiologos_events.2.c: "Enact a truly modern land code."
@@ -113,7 +113,7 @@
 
  palaiologos_events.4.t: "Non-Romaíoi rights?"
  palaiologos_events.4.d: "With our move towards a more professional bureaucratic system in motion, demands have been put forth to nominally elevate the legal status of non-Romaíoi, enabling them to serve as civil servants."
- palaiologos_events.4.f: "The preservation of the Basileía Romaíon in the face of unrest, insurrection, and foreign intervention is a, if not the, primary concern of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]. If we are to achieve this however, steps to appease our minority subjects might be necessary, lest they become pawns of malicious foreign powers."
+ palaiologos_events.4.f: "The preservation of the [ROOT.GetCountry.GetName] in the face of unrest, insurrection, and foreign intervention is a, if not the, primary concern of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]. If we are to achieve this however, steps to appease our minority subjects might be necessary, lest they become pawns of malicious foreign powers."
  palaiologos_events.4.a: "Equal rights under the law! On paper at least."
  palaiologos_events.4.b: "Promise reform, but let us not get carried away."
  palaiologos_events.4.c: "These are mere concessions masqueraded as reform. Denied!"
@@ -157,7 +157,7 @@
 
  palaiologos_events.10.t: "Drafting non-Romaíoi"
  palaiologos_events.10.d: "With the establishment of a military draft, the state must now decide the role, if any, of non-Romaíoi in our army."
- palaiologos_events.10.f: "The Empire's non-Romaíoi subjects have traditionally been exempt from military service, substituting their blood with a special tax paid to the Basileus. Proponents of army modernization have now suggested the extension of the draft to all Romaíon subjects, however, this would rob the imperial coffers of an important source of income."
+ palaiologos_events.10.f: "The Empire's non-Romaíoi subjects have traditionally been exempt from military service, substituting their blood with a special tax paid to the Basileus. Proponents of army modernization have now suggested the extension of the draft to all [ROOT.GetCountry.GetName] subjects, however, this would rob the imperial coffers of an important source of income."
  palaiologos_events.10.a: "Those who can afford it may pay a draft exemption tax."
  palaiologos_events.10.b: "The draft applies to all subjects, regardless of creed."
  
