--- a/localization/english/br_government_l_english.yml
+++ b/localization/english/br_government_l_english.yml
@@ -15,7 +15,7 @@
  gov_satrapy: "Satrapy"
  gov_satrapy_desc: "This is a distant province [concept_government_type] governed by an [Concept('concept_ruler','$RULER_TITLE_SATRAP$')]."
  gov_themata: "Prónoia"
- gov_themata_desc: "[concept_government_type] is a semi autonomous administrative and military district governed by an [Concept('concept_ruler','$RULER_TITLE_STRATEGOS$')] within the Basileía Romaíon."
+ gov_themata_desc: "[concept_government_type] is a semi autonomous administrative and military district governed by an [Concept('concept_ruler','$RULER_TITLE_STRATEGOS$')] within the [ROOT.GetCountry.GetName]."
  gov_celestial_empire: "Celestial Empire"
  gov_celestial_empire_desc: "Celestial Empire is an old name used to refer to China, from a literary and poetic translation of the Chinese term Tianchao, one of many names for China"
 
