--- a/localization/english/br_hippodrome_l_english.yml
+++ b/localization/english/br_hippodrome_l_english.yml
@@ -24,7 +24,7 @@
  chariot_racing.3.a: "What a shame!"
  
  chariot_racing.4.t: "Grand Hippodrome Reopened"
- chariot_racing.4.d: "Today marks the official opening of the revitalized Hippodrome, proudly named in honor of our esteemed Basileus—a beacon of our pride and heritage. This magnificent structure stands as a testament to his profound contributions to our nation. As the fascination with chariot racing continues to grow daily, it's heartening to see this trend spreading throughout the Basileía Romaíon, with many major cities undertaking ambitious projects to build their own Hippodromes, preserving the rich tradition of this thrilling sport."
+ chariot_racing.4.d: "Today marks the official opening of the revitalized Hippodrome, proudly named in honor of our esteemed Basileus—a beacon of our pride and heritage. This magnificent structure stands as a testament to his profound contributions to our nation. As the fascination with chariot racing continues to grow daily, it's heartening to see this trend spreading throughout the [ROOT.GetCountry.GetName], with many major cities undertaking ambitious projects to build their own Hippodromes, preserving the rich tradition of this thrilling sport."
  chariot_racing.4.f: "Be not afraid of greatness: some are born great, some achieve greatness, and some have greatness thrust upon them."
  chariot_racing.4.a: "Let the games begin!"
 
@@ -39,7 +39,7 @@
  chariot_racing.46.t: "Chariot Racing Expanded"
  chariot_racing.46.d: "With the stroke of a pen, the Basileus has expanded the chariot races by two more teams."
  chariot_racing.46.f: "The two new teams have taken it upon themselves to resurrect the #gold Golds#! and the #purple Purples#!, two later Romaíon chariot teams."
- chariot_racing.46.a: "Glory to Basileía Romaíon!"
+ chariot_racing.46.a: "Glory to [ROOT.GetCountry.GetName]!"
  chariot_racing.50.t: "A Day at the Races"
  chariot_racing.50.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #red Rhoúsioi#! came out victorious."
  chariot_racing.50.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the City of the World's Desire itself had come to life.\""
