--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -23,7 +23,7 @@
  je_palaiologos_reforms_syria_reason: "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
 
  je_palaiologos_reforms_egypt: "Palaiologos Reforms: Reclaim Aegypt"
- je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an Basileía Romaíon possession, it has fallen into the hands of a usurper."
+ je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an [ROOT.GetCountry.GetName] possession, it has fallen into the hands of a usurper."
 
  je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Africa"
  je_palaiologos_reforms_africa_reason: "We should turn our attention to Africa. Our influence in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
@@ -44,7 +44,7 @@
  je_palaiologos_reforms_conquest: "Completion unlocks the Journal Entries 'The Palaiologos Refroms Reclaim Aegypt' 'The Palaiologos Refroms Reclaim Africa' 'The Palaiologos Refroms Reclaim Italia'"
 
  je_palaiologos_reforms_main: "Palaiologos Renaissance"
- je_palaiologos_reforms_main_reason: "We must modernize and restore the Basileía Romaíon to greatness!."
+ je_palaiologos_reforms_main_reason: "We must modernize and restore the [ROOT.GetCountry.GetName] to greatness!."
  je_palaiologos_reforms_main_goal: "Complete 12 'Palaiologos' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  je_palaiologos_reforms_economy: "Palaiologos Reforms: Urbanization"
  je_palaiologos_reforms_economy_reason: "Our economy is underdeveloped and unurbanized. We must embark on the path of industrialization."
@@ -68,11 +68,11 @@
  finished_palaiologos_reforms_tt: "Has completed or failed the Palaiologos Renaissance [concept_journal_entry]"
  palaiologos_reforms.1.t: "Palaiologos Renaissance"
  palaiologos_reforms.1.d: "The [ROOT.GetCountry.GetName] is in a period of steady decline. If we do not reassert [ROOT.GetCountry.GetAdjectiveNoFormatting] sovereignty and reclaim our place among the Powers of the world, we risk catastrophe."
- palaiologos_reforms.1.f: "O Basileus, our empire confronts numerous challenges, yet an opportunity lies before us to rejuvenate our former glory. The Varangians, staunch upholders of the old order resistant to change for centuries, have been overthrown. Our decline since the days of the Macedonian revival and the remarkable Komnenoi restoration, during which we regained dominion over the Balkans, Aegypt, North Africa, and Italia, our fortunes have waned. The corruption prevalent in preceding feeble dynasties has caused the empire to disintegrate and fragment. Influential Dynatoi families have seized your authority, undermining the state for their own gain. Latinoi merchants, granted extensive privileges, have monopolized significant sectors of our economy. Once our mightiest and most loyal assets, the Varangians have betrayed us by selling off the Imperial purple to the highest bidder, enriching themselves and eliminating any ruler attempting to reform the deeply rooted corruption. A substantial undertaking lies ahead of us. We must suppress rebellions and reinforce our control over the Exarchates that have broken away. The Varangians must be replaced with a modern army capable of defending our territories. Furthermore, we must strive to restore the Basileía Romaíon to its former glory as the epitome of civilization.Our primary focus will be on education, urbanization, and sovereignty. It is time for the Palaiologos Renaissance to usher in a new era of enlightenment and strength."
+ palaiologos_reforms.1.f: "O Basileus, our empire confronts numerous challenges, yet an opportunity lies before us to rejuvenate our former glory. The Varangians, staunch upholders of the old order resistant to change for centuries, have been overthrown. Our decline since the days of the Macedonian revival and the remarkable Komnenoi restoration, during which we regained dominion over the Balkans, Aegypt, North Africa, and Italia, our fortunes have waned. The corruption prevalent in preceding feeble dynasties has caused the empire to disintegrate and fragment. Influential Dynatoi families have seized your authority, undermining the state for their own gain. Latinoi merchants, granted extensive privileges, have monopolized significant sectors of our economy. Once our mightiest and most loyal assets, the Varangians have betrayed us by selling off the Imperial purple to the highest bidder, enriching themselves and eliminating any ruler attempting to reform the deeply rooted corruption. A substantial undertaking lies ahead of us. We must suppress rebellions and reinforce our control over the Exarchates that have broken away. The Varangians must be replaced with a modern army capable of defending our territories. Furthermore, we must strive to restore the [ROOT.GetCountry.GetName] to its former glory as the epitome of civilization.Our primary focus will be on education, urbanization, and sovereignty. It is time for the Palaiologos Renaissance to usher in a new era of enlightenment and strength."
  palaiologos_reforms.1.a: "Great reform is needed."
  palaiologos_reforms.2.t: "Palaiologos Reforms: The Reorganization"
  palaiologos_reforms.2.desc: "The [ROOT.GetCountry.GetName] has successfully modernized and re-asserted itself on the world stage. A new era begins for the [ROOT.GetCountry.GetAdjectiveNoFormatting] state."
- palaiologos_reforms.2.f: "Sublime. That is the only word for it. To walk the streets of Konstantinople and see modern factories and schools, to see the guards practicing their military drill. A landscape once dominated by peasant farmers is now littered with shining cities. And to think that only a few decades ago Basileía Romaíon was on the brink of collapse! Where once the European powers looked upon us with pity and greedily sought to partition our lands, now we see their diplomats gazing in awe at our accomplishments, forced to recognize us as equals. God is good!"
+ palaiologos_reforms.2.f: "Sublime. That is the only word for it. To walk the streets of Konstantinople and see modern factories and schools, to see the guards practicing their military drill. A landscape once dominated by peasant farmers is now littered with shining cities. And to think that only a few decades ago [ROOT.GetCountry.GetName] was on the brink of collapse! Where once the European powers looked upon us with pity and greedily sought to partition our lands, now we see their diplomats gazing in awe at our accomplishments, forced to recognize us as equals. God is good!"
  palaiologos_reforms.2.a: "The army could use additional reforms."
  palaiologos_reforms.2.b: "We should re-conquer the Balkans!"
  palaiologos_reforms.2.c: "Follow through with urbanization."
@@ -82,13 +82,13 @@
  romaioi_education: "Romaíon Education"
  palaiologos_reforms.3.t: "The Palaiologos Failure"
  palaiologos_reforms.3.d: "The [ROOT.GetCountry.GetName] has failed to modernize and re-assert itself on the world stage. The vultures begin to circle as the last days of the [ROOT.GetCountry.GetName] draw near."
- palaiologos_reforms.3.f: "The Basileía Romaíon falls silent. Just days after announcing [SCOPE.sCharacter('romaioi_sultan').GetHerHis] intention to abdicate, most likely under the duress of [SCOPE.sCharacter('romaioi_sultan').GetHerHis] ministers, the [SCOPE.sCharacter('romaioi_sultan').GetPrimaryRoleTitle] has been found dead in [SCOPE.sCharacter('romaioi_sultan').GetHerHis] chambers. Much like our precious empire, the [SCOPE.sCharacter('romaioi_sultan').GetPrimaryRoleTitle] had been suffering from a long, creeping sickness that ultimately made [SCOPE.sCharacter('romaioi_sultan').GetHerHim] unable to bear the weight of the crown. A broken and deranged shadow of [SCOPE.sCharacter('romaioi_sultan').GetHerHis] former self."
+ palaiologos_reforms.3.f: "The [ROOT.GetCountry.GetName] falls silent. Just days after announcing [SCOPE.sCharacter('romaioi_sultan').GetHerHis] intention to abdicate, most likely under the duress of [SCOPE.sCharacter('romaioi_sultan').GetHerHis] ministers, the [SCOPE.sCharacter('romaioi_sultan').GetPrimaryRoleTitle] has been found dead in [SCOPE.sCharacter('romaioi_sultan').GetHerHis] chambers. Much like our precious empire, the [SCOPE.sCharacter('romaioi_sultan').GetPrimaryRoleTitle] had been suffering from a long, creeping sickness that ultimately made [SCOPE.sCharacter('romaioi_sultan').GetHerHim] unable to bear the weight of the crown. A broken and deranged shadow of [SCOPE.sCharacter('romaioi_sultan').GetHerHis] former self."
  palaiologos_reforms.3.a: "We belong to God, and to Him do we return."
 
  # Palaiologos Reforms Events
 
  je_palaiologos_reforms_bureaucracy: "Palaiologos Reforms: Bureaucratic Reform"
- palaiologos_reforms.2.e: "Basileía Romaíon runs on paper."
+ palaiologos_reforms.2.e: "[ROOT.GetCountry.GetName] runs on paper."
  je_palaiologos_reforms_bureaucracy_reason: "Our bureaucracy is a patchwork of archaic laws and systems, with corrupt, autonomous bureaucrats barely exerting control over the Empire's provinces. If we are to overcome the many challenges to our rule, we must modernize our administrative system."
  romaioi_bureaucracy: "Romaíon Bureaucracy"
  palaiologos_reforms_of_europe: "Palaiologos Renaissance"
