--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -36,7 +36,7 @@
  vive_la_revolution_decision_desc: "The French Revolution was a period of radical political and societal change in France that began with the Estates General and ended with the formation of the French Consulate and finally leading to the The First French Empire, Napoleonic France, was the empire ruled by Napoleon Bonaparte, who established French hegemony over much of continental Europe."
 
  armenian_decision: "Accept Armenians"
- armenian_decision_desc: "Armenians have proven themselves as loyal subjects of [ROOT.GetCountry.GetName], it's time we give them the same rights as Romaíoi."
+ armenian_decision_desc: "Armenians have proven themselves as loyal subjects of Basileia Romaion, it's time we give them the same rights as Romaíoi."
  azerbaijani_decision: "Accept Azerbaijani"
  azerbaijani_decision_desc: "Azerbaijani have proven themselves as loyal subjects of Persia, it's time we give them the same rights as Persians."
  mashriqi_decision: "Accept Mashriqi"
