--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -9,38 +9,30 @@
  veiled_exarchate_aegypt: "The Exarchate Aegypt"
  veiled_exarchate_africa: "The Exarchate Africa"
  veiled_exarchate_italy: "The Katepaníkion Italia"
-
  je_veiled_exarchate: "The Exarchate of Aegypt"
  je_veiled_exarchate_reason: "Our influence in Aegypt has grown considerably, yet our power in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over the country, our domination would be assured."
-
  je_veiled_exarchate2: "The Exarchate of Africa"
  je_veiled_exarchate2_reason: "Our influence in Africa has grown considerably, yet our power in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over the country, our domination would be assured."
-
  je_veiled_exarchate3: "The Katepaníkion of Italia"
  je_veiled_exarchate3_reason: "Our influence in Italia has grown considerably, yet our power in the region is dependent on our relations with the breakaway Katepaníkion. By reestablishing formal dominion over the country, our domination would be assured."
 
+
  je_palaiologos_reforms_syria: "Palaiologos Reforms: Reclaim Syria"
  je_palaiologos_reforms_syria_reason: "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
-
  je_palaiologos_reforms_egypt: "Palaiologos Reforms: Reclaim Aegypt"
  je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an [ROOT.GetCountry.GetName] possession, it has fallen into the hands of a usurper."
-
- je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Africa"
- je_palaiologos_reforms_africa_reason: "We should turn our attention to Africa. Our influence in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
-
+ je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Afrika"
+ je_palaiologos_reforms_africa_reason: "We should turn our attention to Afrika. Our influence in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
  je_palaiologos_reforms_italy: "Palaiologos Reforms: Reclaim Italia"
  je_palaiologos_reforms_italy_reason: "We should turn our attention to Italia. Our influence in the region is dependent on our relations with the breakaway Katepaníkion. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
-
  je_palaiologos_reforms_elysium: "Palaiologos Reforms: Bring Elysium Home"
  je_palaiologos_reforms_elysium_reason: "We should turn our attention to the new world. Our wayward colony must be brought home."
-
  je_palaiologos_reforms_australis: "Palaiologos Reforms: Antipódeia Colony"
- je_palaiologos_reforms_australis_reason: "Antipódeia though never a formal colony has been settled from our citizens thoughout the Romaion Commonwealth."
+ je_palaiologos_reforms_australis_reason: "Antipódeia though never a formal colony has been settled primarily from our citizens and cultural sphere."
 
  je_palaiologos_reforms_navy: "Palaiologos Reforms: Naval Reform"
  je_palaiologos_reforms_navy_reason: "The navy has been long-neglected and is a hotbed of disloyalty. During our early wars with our rebellious Exarchates our navy threatened to defect to the Aegyptians multiple times, and we are forced to rely on the support of Latin powers to defend our coasts and the straits. Renovating the navy by developing our officer corps, fielding new detachments and outfitting new, larger ships must be a priority."
  
- je_palaiologos_reforms_economy_goal: "Double your GDP."
  je_palaiologos_reforms_conquest: "Completion unlocks the Journal Entries 'The Palaiologos Refroms Reclaim Aegypt' 'The Palaiologos Refroms Reclaim Africa' 'The Palaiologos Refroms Reclaim Italia'"
 
  je_palaiologos_reforms_main: "Palaiologos Renaissance"
@@ -48,23 +40,27 @@
  je_palaiologos_reforms_main_goal: "Complete 12 'Palaiologos' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  je_palaiologos_reforms_economy: "Palaiologos Reforms: Urbanization"
  je_palaiologos_reforms_economy_reason: "Our economy is underdeveloped and unurbanized. We must embark on the path of industrialization."
+ je_palaiologos_reforms_economy_goal: "Double your GDP."
  je_palaiologos_reforms_education: "Palaiologos Reforms: Education Reform"
  je_palaiologos_reforms_education_reason: "So few within our domain have even a basic grasp of literacy. We should establish schools in which to teach them, as well as our own institute of higher learning."
+ je_palaiologos_reforms_education_goal: "Increase the literacy rate of your people by 35%."
+ je_palaiologos_reforms_separatism: "Palaiologos Reforms: Suppress Separatism"
+ je_palaiologos_reforms_separatism_reason: "We have already lost Italia and Afrika; we cannot allow our empire to collapse to separatist rebels."
+ je_palaiologos_reforms_separatism_goal: "The following must be true for 30 total years:"
+ je_palaiologos_reforms_security: "Palaiologos Reforms: Lawless Countryside"
+ je_palaiologos_reforms_security_reason: "Since the chaos and instability of the previous century the countryside has become lawless and filled with brigands. We must restore order to the countryside."
+ je_palaiologos_reforms_land_reform: "Palaiologos Reforms: Land Reform"
+ je_palaiologos_reforms_land_reform_reason: "The Dynatoi have seized control of the land and are oppressing the peasantry. We must restore the land to the people."
+ je_palaiologos_reforms_army: "Palaiologos Reforms: Army Modernization"
+ je_palaiologos_reforms_army_reason: "Though the Varangians have been disbanded, there is far more that must be done to modernize our armed forces."
+ je_palaiologos_reforms_end_curruption: "Palaiologos Reforms: Fight Systemic Corruption"
+ je_palaiologos_reforms_end_curruption_reason: "Fighting the corruption that runs rampant in all levels of society won't be easy many entrenched elites benefit from the status quo and may revolt."
+ je_palaiologos_reforms_end_latin_privileges: "Palaiologos Reforms: End Latin Privileges."
+ je_palaiologos_reforms_end_latin_privileges_reason: "We were forced to give vast economic consessions to the latins in exchange for their help during the troubles. They now enjoy an unfair monopoly on our trade and economy. We must end this."
  je_palaiologos_reforms_centralization_west: "Palaiologos Reforms: Balkan Centralization"
  je_palaiologos_reforms_centralization_west_reason: "Powerful Dynatói have carved out semi independent estates in the Greek Heartland, we must bring them back under the direct control of Konstantinople."
  je_palaiologos_reforms_centralization_east: "Palaiologos Reforms: Anatolian Centralization"
  je_palaiologos_reforms_centralization_east_reason: "Powerful Dynatói have carved out semi independent estates in Anatolia, we must bring them back under the direct control of Konstantinople."
-
- je_palaiologos_reforms_education_goal: "Increase the literacy rate of your people by 35%."
- je_palaiologos_reforms_separatism: "Palaiologos Reforms: Suppress Separatism"
- je_palaiologos_reforms_separatism_reason: "We have already lost Italia and Africa; we cannot allow our empire to collapse to separatist rebels."
- je_palaiologos_reforms_separatism_goal: "The following must be true for 30 total years:"
- je_palaiologos_reforms_army: "Palaiologos Reforms: Army Modernization"
- je_palaiologos_reforms_army_reason: "Though the Varangians have been disbanded, there is far more that must be done to modernize our armed forces."
- je_palaiologos_reforms_end_curruption: "Palaiologos Reforms: Fight Systemic Corruption"
- je_palaiologos_reforms_end_curruption_reason: "Fighting the corruption that runs rampant in all levels of government won't be easy many entrenched elites benefit from the status quo and may revolt."
- je_palaiologos_reforms_end_latin_privileges: "Palaiologos Reforms: End Latin Privileges."
- je_palaiologos_reforms_end_latin_privileges_reason: "The Latins have enjoyed an unfair monopoly on our trade and economy for too long."
  finished_palaiologos_reforms_tt: "Has completed or failed the Palaiologos Renaissance [concept_journal_entry]"
  palaiologos_reforms.1.t: "Palaiologos Renaissance"
  palaiologos_reforms.1.d: "The [ROOT.GetCountry.GetName] is in a period of steady decline. If we do not reassert [ROOT.GetCountry.GetAdjectiveNoFormatting] sovereignty and reclaim our place among the Powers of the world, we risk catastrophe."
