--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -21,6 +21,8 @@
  romaioi_military_reorganization: "Military Reorganization"
  br_modifier_eastern_roman_emperor: "Basileus Romaíon"
  br_modifier_roman_roads: "Romaíon Infrastructure"
+ br_modifier_lawless_countryside : "Lawless Countryside"
+ br_modifier_national_separatism: "National Separatists"
 
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
