--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -265,6 +265,9 @@
  je_br_tithe_profits_reason: "Peter's Pence (or Denarii Sancti Petri and "Alms of St Peter") are donations or payments made directly to the Holy See of the Catholic Church."
  je_restore_north_italy: "Unite Italia settentrionale"  
  je_restore_north_italy_reason: "We should seek to unite all of Italia settentrionale into our state."  
+ je_china_reforms_navy: "Naval Reform"
+ je_china_reforms_navy_reason: "The navy is highly decentralized with each region commanding its own local navies. Renovating the navy by developing our officer corps, fielding new detachments and outfitting new, larger ships must be a priority."
+ 
 
 
  
