--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -1,49 +1,52 @@
 ﻿l_english:
 
+ #Journal loc
  br_je_conference_of_poznan: "Poznan Conference"
- br_je_conference_of_poznan_reason: "The great powers have sent their delegations to Poznan to decide on a solution to the unsolved border issues between [SCOPE.sCountry('br_north_german_federation_scope').GetName] and [SCOPE.sCountry('br_commonwealth_scope').GetName]. \n\n#variable [GetGlobalVariable( 'br_je_conference_of_poznan_participants_var' ).GetValue]#! [Concept('concept_great_power', '$concept_great_powers$')] are participating in the Conference.\n#bold #tooltippable #tooltip:br_request_poznan_button_desc $br_request_poznan_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_1' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_request_pomorze_button_desc $br_request_pomorze_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_2' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_fate_of_prussia_button_desc $br_fate_of_prussia_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_3' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_counter_offer_button_desc $br_counter_offer_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_4' ).GetValue]#! votes\n\nThe conference will conclude in #variable [GetGlobalVariable('br_je_conference_of_poznan_timer').GetValue]#! months. The proposal with the #tooltippable #tooltip:br_poznan_treaty_voting_rules most votes#!#! will then be selected as the conference's offical solution.\n\n#Bold Result#!\nThe Conference has [ROOT.GetCountry.GetCustom('treaty_of_poznan_coutcome')]"
+ br_je_conference_of_poznan_reason: "The great powers have sent their delegations to Poznan to decide on a solution to the unsolved border issues between [SCOPE.sCountry('br_north_german_federation_scope').GetName] and [SCOPE.sCountry('br_commonwealth_scope').GetName]. \n\n#variable [GetGlobalVariable( 'br_je_conference_of_poznan_participants_var' ).GetValue]#! [Concept('concept_great_power', '$concept_great_powers$')] are participating in the Conference.\n#bold #tooltippable #tooltip:br_request_poznan_button_desc $br_request_poznan_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_1' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_request_pomorze_button_desc $br_request_pomorze_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_2' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_fate_of_prussia_button_desc $br_fate_of_prussia_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_3' ).GetValue]#! votes\n#bold #tooltippable #tooltip:br_counter_offer_button_desc $br_counter_offer_button$#!#!#! has received #variable [GetGlobalVariable( 'br_je_conference_of_poznan_proposal_4' ).GetValue]#! votes\n\nThe conference will conclude in #variable [GetGlobalVariable('br_je_conference_of_poznan_timer').GetValue]#! months. The proposal with the #tooltippable #tooltip:br_poznan_treaty_voting_rules most votes#!#! will then be selected as the conference's offical solution."
  br_je_conference_of_poznan_tt_1: "The Conference has decided how to settle the Baltic question."
- br_je_conference_of_poznan_tt_2: "#v $PLC$#! has accepted the outcome of the Conference"
- br_je_conference_of_poznan_tt_4: "#v $NGF$#! has accepted the outcome of the Conference"
- br_je_conference_of_poznan_tt_3: "Either #v $PLC$#! or #v $NGF$#! have rejected the outcome of the conference."
- br_je_conference_of_poznan_tt_5: "Hostilities have broken out between $PLC$#! and #v $NGF$#"
+ br_je_conference_of_poznan_tt_2: "#v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! has accepted the outcome of the Conference"
+ br_je_conference_of_poznan_tt_4: "#v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! has accepted the outcome of the Conference"
+ br_je_conference_of_poznan_tt_3: "Either #v $PLC$#! or #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! have rejected the outcome of the conference."
+ br_je_conference_of_poznan_tt_5: "Hostilities have broken out between $PLC$#! and #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#"
  poznan_conference_made_choice_tt: "We have #bold not#! backed a proposal"
  br_poznan_treaty_voting_rules: "In the case where two leading proposals receive the same number of votes, the proposal backed by the [concept_great_power] with the highest [concept_rank] will be chosen."
+ 
+ #Scripted Button loc
  br_request_poznan_button: "Request Poznan"
- br_request_poznan_button_desc: "#v $PLC$#! is to receive the provinces of Limburg and Luxemburg in full.\n\nIn order to compensate #v $NGF$#! for the loss of the two provinces, #v $PLC$#! must assume the total public [Concept('concept_credit','$concept_credit_debt$')] of the former #tooltippable #tooltip:br_poznan_treaty_public_debt_info #bold United Kingdom of the Netherlands#!#!#!."
+ br_request_poznan_button_desc: "#v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! is to receive the province of #v $STATE_POSEN$#! in full.\n\nIn order to compensate #v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! for the loss of a province, #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! must assume a quarter of the public [Concept('concept_credit','$concept_credit_debt$')]."
  br_request_pomorze_button: "Request Pomorze"
- br_request_pomorze_button_desc: "#v $NGF$#! is to receive the provinces of Limburg and Luxemburg in full.\n\nIn order to compensate #v $PLC$#! for the loss of the two provinces, #v $NGF$#! must assume the total public [Concept('concept_credit','$concept_credit_debt$')] of the former #tooltippable #tooltip:br_poznan_treaty_public_debt_info #bold United Kingdom of the Netherlands#!#!#!."
+ br_request_pomorze_button_desc: "#v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! is to receive the province of #v $STATE_WEST_PRUSSIA$#! in full.\n\nIn order to compensate #v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! for the loss of a province, #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! must assume a quarter of the public [Concept('concept_credit','$concept_credit_debt$')]."
  br_fate_of_prussia_button: "Decide on the fate of Prussia"
- br_fate_of_prussia_button_desc: "The provinces of Limburg and Luxemburg will be partitioned between #v $PLC$#! and #v $NGF$#!.\n\nIn order to compenstate the German Federation for the loss of Western Luxemburg, $LIM$ will be established as a $NGF_ADJ$ [concept_subject] and a nominal member of the German Confederation."
+ br_fate_of_prussia_button_desc: "We will decide on what will happen to the state of [SCOPE.sCountry('br_prussia_scope').GetName]"
  br_counter_offer_button: "Give a counter offer"
- br_counter_offer_button_desc:1 "#v $PLC$#! will retain the entire province of Limburg, in exchange for #v $NGF$#! receiving the entirety of Luxemburg."
+ br_counter_offer_button_desc: "#v TODO#!"
  we_chose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will officially favour this proposal."
  we_unchose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
- br_poznan_treaty_public_debt_info: "Since #bold Belgium's#! 1830 secession from the #bold Kingdom of the Netherlands#!, the two parties have faced ongoing challenges in determining how to divide the national [Concept('concept_credit','$concept_credit_debt$')] of their once-united kingdom."
  poznan_conference_approve_button: "Ratify the Treaty of Poznan"
- poznan_conference_approve_button_desc: "The agreed upon proposal is acceptable. Instruct our men in London to sign the document."
+ poznan_conference_approve_button_desc: "The agreed upon proposal is acceptable. Instruct our men in Poznan to sign the document."
  poznan_conference_approve_button_tt: "[ROOT.GetCountry.GetName] ratifies the treaty. Should both $NGF$ and $PLC$ agree, the treaty will then enter into effect."
  poznan_conference_disapprove_button: "Refuse to Sign"
  poznan_conference_disapprove_button_desc: "This outcome does not serve [ROOT.GetCountry.GetAdjectiveNoFormatting] interests. We will not put our names to this scrap of paper."
  poznan_conference_disapprove_button_tt: "Negotiations between $PLC$ and $NGF$ will break down."
- poznan_conference_has_concluded_loc: "The London Conference has concluded."
+ poznan_conference_has_concluded_loc: "The Poznan Conference has concluded."
 
+ #Journal events loc
  treaty_of_poznan_events.1.t: "The Belgian Question"
  treaty_of_poznan_events.1.d: "Since the secession of [SCOPE.sCountry('br_commonwealth_scope').GetName] in 1830, [ROOT.GetCountry.GetAdjective] efforts to reunify the country have all met with failure. Weary of the effects of the current, uneasy truce, many are now urging the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] to commit to a final, negotiated settlement."
- treaty_of_poznan_events.1.f: ""The revolution of 1830 is and will remain the greatest state error of this century, but our efforts to reclaim these lands by force have failed and our prospects are looking bleaker by the day.\n\nWe currently stand to gain more from arbitration than we do through force of arms. Sir, I implore you to dispatch a mission to Brussels as soon as humanly possible.""
+ treaty_of_poznan_events.1.f: "'The revolution of 1830 is and will remain the greatest state error of this century, but our efforts to reclaim these lands by force have failed and our prospects are looking bleaker by the day.\n\nWe currently stand to gain more from arbitration than we do through force of arms. Sir, I implore you to dispatch a mission to Brussels as soon as humanly possible.'"
  treaty_of_poznan_events.1.a: "Agreed. Call for a conference to settle the matter at last."
  treaty_of_poznan_events.1.b: "We do not negotiate with rebels."
  treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by $PLC$ and $NGF$."
 
  treaty_of_poznan_events.2.t: "The Hague Call for a Conference"
  treaty_of_poznan_events.2.d: "Weary of the uneasy truce existing between our two countries, the [SCOPE.sCountry('br_north_german_federation_scope').GetAdjective] government has approached us with a proposal for a conference to resolve our current territorial and legal disputes."
- treaty_of_poznan_events.2.f: ""So now the Dutch desire arbitration? No doubt they have their eyes firmly fixed on rightful Belgian soil. Though their ambition lie bare for all to see, we may have little choice in the matter. A refusal to compromise might harm our standing in Europe in ways we cannot easily amend.""
+ treaty_of_poznan_events.2.f: "'So now the Dutch desire arbitration? No doubt they have their eyes firmly fixed on rightful Belgian soil. Though their ambition lie bare for all to see, we may have little choice in the matter. A refusal to compromise might harm our standing in Europe in ways we cannot easily amend.'"
  treaty_of_poznan_events.2.a: "Very well, agree to great power mediation."
  treaty_of_poznan_events.2.b: "We shall not give an inch to the damned Dutch!"
 
  treaty_of_poznan_events.3.t: "Poznan Calling"
  treaty_of_poznan_events.3.d: "The unsettled nature of [SCOPE.sCountry('br_commonwealth_scope').GetAdjectiveNoFlag]-[SCOPE.sCountry('br_north_german_federation_scope').GetAdjectiveNoFlag] relations have threatened European stability ever since 1830. A conference to settle the issue for good has now been called in London, with the great powers of Europe all invited to arbitrate."
- treaty_of_poznan_events.3.f: ""For nearly a decade we have sought to bring these two parts to the table, and for nearly a decade we have been frustrated in our efforts. Now, be it by providence or by a stroke of luck we have them right where we want them. Let us not waste this opportunity, the stability of Europe depends on our success.""
+ treaty_of_poznan_events.3.f: "'For nearly a decade we have sought to bring these two parts to the table, and for nearly a decade we have been frustrated in our efforts. Now, be it by providence or by a stroke of luck we have them right where we want them. Let us not waste this opportunity, the stability of Europe depends on our success.'"
  treaty_of_poznan_events.3.a: "Let us settle this matter once and for all."
  treaty_of_poznan_events.3.b: "We have no interest in this squabble."
 
@@ -77,11 +80,6 @@
  treaty_of_poznan_events.7.i: "What a waste of everybody's time."
  br_finished_deciding_prussia_tt: "We have finished deciding on the Fate of Prussia"
 
-
-
- favour_belgium_loc: "decided to award Belgium all of their territorial claims in exchange for assuming Dutch debts."
- favour_netherlands_loc: "decided to award the Netherlands all of their territorial claims in exchange for assuming Belgian debts."
- partition_compromise_loc: "decided to partition the disputed areas between the Netherlands and Belgium, dividing both Luxembourg and Limburg."
- luxembourg_compromise_loc: "decided to partition the disputed areas between the Netherlands and Belgium, maintaining the integrity of the provinces of Luxembourg and Limburg."
+ #mics
  not_yet_settled_loc: "not yet concluded."
  treaty_of_poznan_outcome_tt: "Territory will be exchanged between $PLC$ and $NGF$ in accordance with their treaty obligations."
