Update to EOCFM 1.0.2

--- a/localization/english/eocfm_l_english.yml
+++ b/localization/english/eocfm_l_english.yml
@@ -555,6 +555,8 @@
  # tooltips
  eocfm_no_effects: "No immedate effects..."
  eocfm_nothing_happens: "Nothing happens..."
+ eocfm_is_orthodox: "[concept_state_religion] is [GetReligion('orthodox').GetName]"
+ eocfm_is_orthodox_NOT: "[concept_state_religion] is #bold NOT#! [GetReligion('orthodox').GetName]"
  
  eocfm_has_icon: "[GetPlayer.GetNameNoFlag] is actively venerating an #bold Orthodox Icon#!"
  eocfm_has_icon_NOT: "[GetPlayer.GetNameNoFlag] is #bold NOT#! actively venerating an #bold Orthodox Icon#!"
@@ -637,7 +639,7 @@
  eocfm_controls_alexandria: "[GetPlayer.GetNameNoFlag] $eocfm_controls$ the [concept_patriarchal_seat] of $eocfm_alexandria$"
  eocfm_controls_moscow: "[GetPlayer.GetNameNoFlag] $eocfm_controls$ the [concept_patriarchal_seat] of $eocfm_moscow$"
  eocfm_needs_controller: "A [concept_country] must have $eocfm_control$ of $eocfm_constantinople$"
- eocfm_rome_reclaimed: "$eocfm_rome$ is controlled by an [GetReligion('orthodox').GetName [concept_country]"
+ eocfm_rome_reclaimed: "$eocfm_rome$ is controlled by an [GetReligion('orthodox').GetName] [concept_country]"
  eocfm_turk_relations_cordial: "[GetPlayer.GetNameNoFlag] has #bold #green cordial#!#! relations or better with the #yellow Ottoman Empire#!"
  eocfm_constantinople_controller_relations_cordial: "We have #green #bold Cordial#! or better#! [concept_relations] with the [concept_country] that controls $eocfm_constantinople$"
  
