New Land Reform Character IG

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -109,6 +109,8 @@
  br_ideology_oligarchic_leader_desc: "This character seeks to entrench the power of the ruling class against both autocratic and democratic interventions."
  br_ideology_aristocratic_leader: "Aristocratic"
  br_ideology_aristocratic_leader_desc: "This character's sympathies lie with the traditional landed elite. They stand against modernization efforts that would undermine the power base of the nobility."
+ br_ideology_land_reformer: "Land Reformer"
+ br_ideology_land_reformer_desc: "This character believes in the gradual abolition of serfdom and the eventual liberation of the peasantry."
 
 
  #Rural Folk
