--- a/localization/english/br_government_l_english.yml
+++ b/localization/english/br_government_l_english.yml
@@ -18,6 +18,14 @@
  gov_themata_desc: "[concept_government_type] is a semi autonomous administrative and military district governed by an [Concept('concept_ruler','$RULER_TITLE_STRATEGOS$')] within the [ROOT.GetCountry.GetName]."
  gov_celestial_empire: "Celestial Empire"
  gov_celestial_empire_desc: "Celestial Empire is an old name used to refer to China, from a literary and poetic translation of the Chinese term Tianchao, one of many names for China"
+ gov_br_caliphate: "Caliphate"
+ gov_br_caliphate_desc: "A [concept_government_type] where the power rests with the Caliph, the political and religious leader of the Muslim world."
+ gov_br_colonial_administration: "Colonial Administration"
+ gov_br_colonial_administration_desc: "A [concept_government_type] where the power rests with the colonial administration, which governs the colony on behalf of the colonizing country."
+ gov_br_crown_colony: "Colonie Impériale"
+ gov_br_crown_colony_desc: "A [concept_government_type] where the power rests with the colonial administration, which governs the colony on behalf of the colonizing country."
+ gov_br_roman_colony: "Apoikía" #Apekiakē Dioikēsis
+ gov_br_roman_colony_desc: "A [concept_government_type] where the power rests with the [Concept('concept_ruler','$RULER_TITLE_BYZ_GOVERNOR$')], who governs the colony on behalf of the [Concept('concept_ruler','$RULER_TITLE_BASILEUS$')] or [Concept('concept_ruler','$RULER_TITLE_BASILISSA$')]."
 
  RULER_TITLE_EXARCH: "Exarchos"
  RULER_TITLE_KATEPANO: "Katepanō"
@@ -26,6 +34,7 @@
  RULER_TITLE_DOGE: "Doge"
  RULER_TITLE_SATRAP: "Satrap"
  RULER_TITLE_STRATEGOS: "Pronoiár"
+ RULER_TITLE_BYZ_GOVERNOR: "Domestikos" #Full title Domestikos tēs Apekias or Domestikos tēs Apoikias
 
 # subject_type_exarchate: "Exarchate"
 # subject_type_exarchate_desc: "This is a government form where the power rests mainly with the Exarch."
