--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -132,8 +132,8 @@
  br_giamaica_ADJ: "Giamaican"
  br_new_granada: "New Granada"
  br_new_granada_ADJ: "Granadian"
- br_romaioi_india_company: "Emporía Erythrás Thálassas"
- br_romaioi_india_company_ADJ: "Erythrás Thálassas"
+ br_romaioi_india_company: "Emporikē Hetaireia tēs Indikēs" #Emporía Erythrás Thálassas
+ br_romaioi_india_company_ADJ: "Hetaireia Indikēs"
  br_dutch_west_indies: "Dutch West Indies"
  br_dutch_west_indies_ADJ: "Dutch West Indies"
  br_formosa_natives: "Formosa"
