updated conference starting events and conclusion
-updated conference starting events and conclusion
-added an accept the extension of the conference event for poland
-added new scripted effects
-updated loc for all conference events

--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -6,8 +6,8 @@
  br_je_conference_of_poznan_tt_1: "The Conference has decided how to settle the Baltic question."
  br_je_conference_of_poznan_tt_2: "#v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! has accepted the outcome of the Conference"
  br_je_conference_of_poznan_tt_4: "#v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! has accepted the outcome of the Conference"
- br_je_conference_of_poznan_tt_3: "Either #v $PLC$#! or #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! have rejected the outcome of the conference."
- br_je_conference_of_poznan_tt_5: "Hostilities have broken out between $PLC$#! and #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#"
+ br_je_conference_of_poznan_tt_3: "Either #v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! or #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! have rejected the outcome of the conference."
+ br_je_conference_of_poznan_tt_5: "Hostilities have broken out between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! and #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#"
  poznan_conference_made_choice_tt: "We have #bold not#! backed a proposal"
  br_poznan_treaty_voting_rules: "In the case where two leading proposals receive the same number of votes, the proposal backed by the [concept_great_power] with the highest [concept_rank] will be chosen."
  
@@ -24,35 +24,33 @@
  we_unchose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
  poznan_conference_approve_button: "Ratify the Treaty of Poznan"
  poznan_conference_approve_button_desc: "The agreed upon proposal is acceptable. Instruct our men in Poznan to sign the document."
- poznan_conference_approve_button_tt: "[ROOT.GetCountry.GetName] ratifies the treaty. Should both $NGF$ and $PLC$ agree, the treaty will then enter into effect."
+ poznan_conference_approve_button_tt: "[ROOT.GetCountry.GetName] ratifies the treaty. Should both [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] agree, the treaty will then enter into effect."
  poznan_conference_disapprove_button: "Refuse to Sign"
  poznan_conference_disapprove_button_desc: "This outcome does not serve [ROOT.GetCountry.GetAdjectiveNoFormatting] interests. We will not put our names to this scrap of paper."
- poznan_conference_disapprove_button_tt: "Negotiations between $PLC$ and $NGF$ will break down."
+ poznan_conference_disapprove_button_tt: "Negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] will break down."
  poznan_conference_has_concluded_loc: "The Poznan Conference has concluded."
 
  #Journal events loc
- treaty_of_poznan_events.1.t: "The Belgian Question"
- treaty_of_poznan_events.1.d: "Since the secession of [SCOPE.sCountry('br_commonwealth_scope').GetName] in 1830, [ROOT.GetCountry.GetAdjective] efforts to reunify the country have all met with failure. Weary of the effects of the current, uneasy truce, many are now urging the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] to commit to a final, negotiated settlement."
- treaty_of_poznan_events.1.f: "'The revolution of 1830 is and will remain the greatest state error of this century, but our efforts to reclaim these lands by force have failed and our prospects are looking bleaker by the day.\n\nWe currently stand to gain more from arbitration than we do through force of arms. Sir, I implore you to dispatch a mission to Brussels as soon as humanly possible.'"
+ treaty_of_poznan_events.1.t: "The Baltic Question"
+ treaty_of_poznan_events.1.d: "The german people in the proces of unification now look to the baltic holdings of the [SCOPE.sCountry('br_commonwealth_scope').GetName], facing internal issues themselfs the [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] has called for a conference to be held instead in the hope that they could perhaps prevent war."
+ treaty_of_poznan_events.1.f: "'The [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] seeks to unify with the baltic german people.'"
  treaty_of_poznan_events.1.a: "Agreed. Call for a conference to settle the matter at last."
- treaty_of_poznan_events.1.b: "We do not negotiate with rebels."
- treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by $PLC$ and $NGF$."
+ #treaty_of_poznan_events.1.b: "We do not negotiate with the enemy."
+ treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]."
 
- treaty_of_poznan_events.2.t: "The Hague Call for a Conference"
- treaty_of_poznan_events.2.d: "Weary of the uneasy truce existing between our two countries, the [SCOPE.sCountry('br_north_german_federation_scope').GetAdjective] government has approached us with a proposal for a conference to resolve our current territorial and legal disputes."
- treaty_of_poznan_events.2.f: "'So now the Dutch desire arbitration? No doubt they have their eyes firmly fixed on rightful Belgian soil. Though their ambition lie bare for all to see, we may have little choice in the matter. A refusal to compromise might harm our standing in Europe in ways we cannot easily amend.'"
- treaty_of_poznan_events.2.a: "Very well, agree to great power mediation."
- treaty_of_poznan_events.2.b: "We shall not give an inch to the damned Dutch!"
+ treaty_of_poznan_events.2.t: "Poznan Calling"
+ treaty_of_poznan_events.2.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
+ treaty_of_poznan_events.2.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
+ treaty_of_poznan_events.2.a: "Interesting."
 
  treaty_of_poznan_events.3.t: "Poznan Calling"
- treaty_of_poznan_events.3.d: "The unsettled nature of [SCOPE.sCountry('br_commonwealth_scope').GetAdjectiveNoFlag]-[SCOPE.sCountry('br_north_german_federation_scope').GetAdjectiveNoFlag] relations have threatened European stability ever since 1830. A conference to settle the issue for good has now been called in London, with the great powers of Europe all invited to arbitrate."
- treaty_of_poznan_events.3.f: "'For nearly a decade we have sought to bring these two parts to the table, and for nearly a decade we have been frustrated in our efforts. Now, be it by providence or by a stroke of luck we have them right where we want them. Let us not waste this opportunity, the stability of Europe depends on our success.'"
- treaty_of_poznan_events.3.a: "Let us settle this matter once and for all."
- treaty_of_poznan_events.3.b: "We have no interest in this squabble."
+ treaty_of_poznan_events.3.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
+ treaty_of_poznan_events.3.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
+ treaty_of_poznan_events.3.a: "Interesting."
 
  treaty_of_poznan_events.4.t: "Poznan Conference Concludes"
- treaty_of_poznan_events.4.d: "The conference has concluded, and [ROOT.GetCountry.GetCustom('treaty_of_poznan_coutcome')]"
- treaty_of_poznan_events.4.f: "#bold European Powers Guarantee Peace and Stability#!\nThe newly ratified Treaty of London is a cornerstone of European peace; it solidifies Belgium’s neutrality and independence and marks a new chapter in European diplomacy, one that prioritizes peace and mutual respect among nations. While the Dutch delegation... (cont. pp. 3-6)"
+ treaty_of_poznan_events.4.d: "The conference has concluded"
+ treaty_of_poznan_events.4.f: "#bold European Powers Guarantee Peace and Stability#!\nThe newly ratified Treaty of Poznan is a cornerstone of European peace."
  treaty_of_poznan_events.4.a: "For peace in our time, hurrah!"
  guarantors_of_peace_modifier: "Guarantor of Peace"
 
@@ -68,18 +66,24 @@
  treaty_of_poznan_events.6.b: "Do not extend the conference."
  br_the_poznan_conference_will_end_tt: "We will chose to not extend the conference, so the conference of Poznan will end."
 
- treaty_of_poznan_events.7.t: "The Fate of Prussia"
- treaty_of_poznan_events.7.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] ongoing, we must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
- treaty_of_poznan_events.7.f: "We must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
- treaty_of_poznan_events.7.a: "Prussia must be independent"
- treaty_of_poznan_events.7.b: "[SCOPE.sCountry('br_commonwealth_scope').GetName] keeps Prussia as a subject"
- treaty_of_poznan_events.7.c: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will subjugate Prussia"
- treaty_of_poznan_events.7.e: "[SCOPE.sCountry('br_commonwealth_scope').GetName] will annex Prussia"
- treaty_of_poznan_events.7.g: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will annex Prussia"
- treaty_of_poznan_events.7.h: "Give $STATE_EAST_PRUSSIA$ to Prussia"
- treaty_of_poznan_events.7.i: "What a waste of everybody's time."
+ treaty_of_poznan_events.7.t: "End of the Poznan Conference?"
+ treaty_of_poznan_events.7.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having gone on for a wile, it would appear that Our time has run up, the congress is at an end, however it seems that [SCOPE.sCountry('br_north_german_federation_scope').GetName] isn't satisfied yet with the current arrangements and they have asked to extend the conference for 3 months. \n\n Will we accept"
+ treaty_of_poznan_events.7.f: "Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
+ treaty_of_poznan_events.7.a: "Extend the conference."
+ treaty_of_poznan_events.7.b: "Do not extend the conference."
+
+ treaty_of_poznan_events.8.t: "The Fate of Prussia"
+ treaty_of_poznan_events.8.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] ongoing, we must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
+ treaty_of_poznan_events.8.f: "We must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
+ treaty_of_poznan_events.8.a: "Prussia must be independent"
+ treaty_of_poznan_events.8.b: "[SCOPE.sCountry('br_commonwealth_scope').GetName] keeps Prussia as a subject"
+ treaty_of_poznan_events.8.c: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will subjugate Prussia"
+ treaty_of_poznan_events.8.e: "[SCOPE.sCountry('br_commonwealth_scope').GetName] will annex Prussia"
+ treaty_of_poznan_events.8.g: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will annex Prussia"
+ treaty_of_poznan_events.8.h: "Give $STATE_EAST_PRUSSIA$ to Prussia"
+ treaty_of_poznan_events.8.i: "What a waste of everybody's time."
  br_finished_deciding_prussia_tt: "We have finished deciding on the Fate of Prussia"
 
  #mics
  not_yet_settled_loc: "not yet concluded."
- treaty_of_poznan_outcome_tt: "Territory will be exchanged between $PLC$ and $NGF$ in accordance with their treaty obligations."
+ treaty_of_poznan_outcome_tt: "Territory will be exchanged between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] in accordance with their treaty obligations."
